--- a/site/assets/css/flexi_form.css
+++ b/site/assets/css/flexi_form.css
@@ -93,12 +93,12 @@ span.fcselect_lbl {
 
 /* Hide input field, but exclude input inside labels (Graceful fallback) */
 
-input[type="checkbox"]:not(old).fc_checkradio,
-input[type="radio"]:not(old).fc_checkradio,
-[name="adminForm"] input[type="checkbox"]:not(old),
-[name="adminForm"] input[type="radio"]:not(old),
-.flexicontent input[type="checkbox"]:not(old),
-.flexicontent input[type="radio"]:not(old) {
+input[type="checkbox"].fc_checkradio,
+input[type="radio"].fc_checkradio,
+[name="adminForm"] input[type="checkbox"]:not(.skip_fccr),
+[name="adminForm"] input[type="radio"]:not(.skip_fccr),
+.flexicontent input[type="checkbox"]:not(.skip_fccr),
+.flexicontent input[type="radio"]:not(.skip_fccr) {
 	width: 24px !important;
 	/*width: 19px !important;*/
 	margin: 0 !important;
@@ -108,12 +108,12 @@ input[type="radio"]:not(old).fc_checkradio,
 }
 div input[type="checkbox"][name^="cid"],
 div input[type="checkbox"]:only-child,
-label input[type="checkbox"].fc_checkradio:not(old),
-label input[type="radio"].fc_checkradio:not(old),
-[name="adminForm"] label input[type="checkbox"]:not(old),
-[name="adminForm"] label input[type="radio"]:not(old),
-.flexicontent label input[type="checkbox"]:not(old),
-.flexicontent label input[type="radio"]:not(old) {
+label input[type="checkbox"].fc_checkradio,
+label input[type="radio"].fc_checkradio,
+[name="adminForm"] label input[type="checkbox"]:not(.skip_fccr),
+[name="adminForm"] label input[type="radio"]:not(.skip_fccr),
+.flexicontent label input[type="checkbox"]:not(.skip_fccr),
+.flexicontent label input[type="radio"]:not(.skip_fccr) {
 	width: auto !important;
 	margin: 3px 3px 0px 0px !important;
 	padding: auto !important;
@@ -125,12 +125,12 @@ label input[type="radio"].fc_checkradio:not(old),
 
 /* Style the label to also include the nice checkbox, radio */
 
-input[type="checkbox"].fc_checkradio:not(old) + label:not(.plupload_button):not(.btn),
-input[type="radio"].fc_checkradio:not(old) + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="checkbox"]:not(old) + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="radio"]:not(old) + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="checkbox"]:not(old) + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="radio"]:not(old) + label:not(.plupload_button):not(.btn) {
+input[type="checkbox"].fc_checkradio + label:not(.plupload_button):not(.btn),
+input[type="radio"].fc_checkradio + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="checkbox"] + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="radio"] + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="checkbox"] + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="radio"] + label:not(.plupload_button):not(.btn) {
 	display: inline-block !important;
 	margin: 1px 12px 1px 0px !important;
 	padding: 0px 0px 0px 24px !important;
@@ -145,27 +145,27 @@ input[type="radio"].fc_checkradio:not(old) + label:not(.plupload_button):not(.bt
 	line-height: 19px !important;
 	height: 19px !important;*/
 }
-input[type="checkbox"].fc_checkradio:not(old):disabled + label:not(.plupload_button):not(.btn),
-input[type="radio"].fc_checkradio:not(old):disabled + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="checkbox"]:not(old):disabled + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="radio"]:not(old):disabled + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="checkbox"]:not(old):disabled + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="radio"]:not(old):disabled + label:not(.plupload_button):not(.btn) {
+input[type="checkbox"].fc_checkradio:disabled + label:not(.plupload_button):not(.btn),
+input[type="radio"].fc_checkradio:disabled + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="checkbox"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="radio"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="checkbox"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="radio"]:not(.skip_fccr):disabled + label:not(.plupload_button):not(.btn) {
 	background-position: 0 -72px !important;
 	font-style: italic !important;
 	color: gray !important;
 	cursor: normal !important;
 	/*background: url(../images/checks2.png) no-repeat 0 0 !important;*/
 }
-input[type="checkbox"].fc_checkradio:not(old) + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="checkbox"]:not(old) + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="checkbox"]:not(old) + label:not(.plupload_button):not(.btn) {
+input[type="checkbox"].fc_checkradio + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="checkbox"] + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="checkbox"] + label:not(.plupload_button):not(.btn) {
 	background: url(../images/checks.png) no-repeat 0 0 !important;
 	/*background: url(../images/checks2.png) no-repeat 0 0 !important;*/
 }
-input[type="radio"].fc_checkradio:not(old) + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="radio"]:not(old) + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="radio"]:not(old) + label:not(.plupload_button):not(.btn) {
+input[type="radio"].fc_checkradio + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="radio"] + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="radio"] + label:not(.plupload_button):not(.btn) {
 	background: url(../images/checks.png) no-repeat 0 0 !important;
 	/*background: url(../images/checks2.png) no-repeat 0 -38px !important;*/
 }
@@ -173,15 +173,15 @@ input[type="radio"].fc_checkradio:not(old) + label:not(.plupload_button):not(.bt
 
 /* Style the checked versions of checkbox,radio */
 
-input[type="checkbox"]:not(old):checked + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="checkbox"]:not(old):checked + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="checkbox"]:not(old):checked + label:not(.plupload_button):not(.btn) {
+input[type="checkbox"]:checked + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="checkbox"]:checked + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="checkbox"]:checked + label:not(.plupload_button):not(.btn) {
 	background-position: 0 -24px !important;
 	/*background-position: 0 -19px !important;*/
 }
-input[type="radio"]:not(old):checked + label:not(.plupload_button):not(.btn),
-[name="adminForm"] input[type="radio"]:not(old):checked + label:not(.plupload_button):not(.btn),
-.flexicontent input[type="radio"]:not(old):checked + label:not(.plupload_button):not(.btn) {
+input[type="radio"]:checked + label:not(.plupload_button):not(.btn),
+[name="adminForm"] input[type="radio"]:checked + label:not(.plupload_button):not(.btn),
+.flexicontent input[type="radio"]:checked + label:not(.plupload_button):not(.btn) {
 	background-position: 0 -48px !important;
 	/*background-position: 0 -57px !important;*/
 }
@@ -240,8 +240,8 @@ li.fc_checkradio_option {
 
 /* Style the label to also include the nice checkbox, radio */
 
-input[type="checkbox"].fc_checkradio_bar:not(old) + label,
-input[type="radio"].fc_checkradio_bar:not(old) + label {
+input[type="checkbox"].fc_checkradio_bar + label,
+input[type="radio"].fc_checkradio_bar + label {
 	display: inline-block !important;
 	margin:-2px !important;
 	padding: 4px 12px !important;
@@ -274,8 +274,8 @@ input[type="radio"].fc_checkradio_bar:not(old) + label {
 
 /* Style the checked versions of checkbox,radio */
 
-input[type="checkbox"].fc_checkradio_bar:not(old):checked + label,
-input[type="radio"].fc_checkradio_bar:not(old):checked + label {
+input[type="checkbox"].fc_checkradio_bar:checked + label,
+input[type="radio"].fc_checkradio_bar:checked + label {
 	background-image: none !important;
 	outline: 0 !important;
 	-webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05) !important;
