--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -459,6 +459,7 @@
 			
 			<field name="" type="separator" default="FLEXI_FORM_CORE_PROPS_PLACEMENT" label="" level="level1" />
 			<field name="form_tab_titles" type="textarea" rows="3" cols="36" label="FLEXI_FORM_TAB_TITLES" description="FLEXI_FORM_TAB_TITLES_DESC" default="" />
+			<field name="form_tab_icons" type="textarea" rows="3" cols="36" label="FLEXI_FORM_TAB_ICONS" description="FLEXI_FORM_TAB_ICONS_DESC" default="" />
 			
 			<field name="" type="separator" default="FLEXI_PLACEMENT_INSIDE_DEFAULT_TABS" label="" level="level2" />
 			
