--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -239,7 +239,7 @@ div fieldset.panelform ul.adminformlist > li .input-prepend {
 }
 
 #jform_tid-lbl, #jform_attribs_ilayout-lbl,
-div fieldset.panelform label.hasTip, div fieldset.panelform label.hasTooltip,
+div fieldset.panelform :not(.label-fcouter) label.hasTip, div fieldset.panelform :not(.label-fcouter) label.hasTooltip,
 .fc_fieldset label.hasTip, .fc_fieldset label.hasTooltip
  {
 	clear: both;
@@ -268,7 +268,7 @@ div fieldset label.btn {
 div.fieldset_value,
 div.panel fieldset input:not(.input-small), div.panel fieldset textarea, div.panel fieldset select,
 div.panel fieldset img, div.panel fieldset button,
-fieldset.panelform label,
+fieldset.panelform :not(.label-fcouter) label,
 fieldset.panelform input:not(.input-small),
 fieldset.panelform textarea, fieldset.panelform select,
 fieldset.panelform img, fieldset.panelform button {
@@ -291,7 +291,7 @@ div fieldset.panelform textarea {
 	width:auto !important;
 }
 
-div fieldset.panelform label {
+div fieldset.panelform :not(.label-fcouter) label {
 	min-width:132px;
 	text-align: right;
 }
