--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -198,14 +198,15 @@ fieldset legend {
  * Fieldsets layout
  ******************/
 
-.controls fieldset.radio, .controls fieldset.checkbox,
+.controls fieldset.radio,
+.controls fieldset.checkbox,
 fieldset.adminform fieldset.radio,
-fieldset.panelform fieldset.radio,
+fieldset.panelform fieldset.radio:not(.btn-group),
 fieldset.adminform-legacy fieldset.radio {
 	border: 0 none !important;
 	float: left !important;
-	margin: 2px 0 0 4px !important;
-	padding: 2px 0px !important;
+	margin: 0px 0 0 4px;
+	padding: 2px 0px;
 }
 
 div fieldset label.radiobtn {
@@ -262,13 +263,12 @@ div fieldset label:not(.btn) {
 }
 div fieldset label.btn {
 	margin: 0px 0px !important;
-	padding: 1px 12px !important;
 }
 
 div.fieldset_value,
 div.panel fieldset input:not(.input-small), div.panel fieldset textarea, div.panel fieldset select,
 div.panel fieldset img, div.panel fieldset button,
-fieldset.panelform :not(.label-fcouter) label,
+fieldset.panelform :not(.label-fcouter) label:not(.btn),
 fieldset.panelform input:not(.input-small),
 fieldset.panelform textarea, fieldset.panelform select,
 fieldset.panelform img, fieldset.panelform button {
