--- a/admin/assets/css/j3x.css
+++ b/admin/assets/css/j3x.css
@@ -266,12 +266,16 @@ div fieldset label.btn {
 }
 
 div.fieldset_value,
-div.panel fieldset input:not(.input-small), div.panel fieldset textarea, div.panel fieldset select,
-div.panel fieldset img, div.panel fieldset button,
+div.panel fieldset textarea,
+div.panel fieldset select,
+div.panel fieldset input:not(.input-small),
+div.panel fieldset img,
+div.panel fieldset button,
 fieldset.panelform :not(.label-fcouter) label:not(.btn),
-fieldset.panelform input:not(.input-small),
-fieldset.panelform textarea, fieldset.panelform select,
-fieldset.panelform img, fieldset.panelform button {
+fieldset.panelform textarea,
+fieldset.panelform select,
+fieldset.panelform :not(.input-prepend):not(.input-append) > input:not(.input-small),
+fieldset.panelform img, fieldset.panelform :not(.input-prepend):not(.input-append) > button {
 	float: left !important;
 	margin: 2px 8px 0px 6px!important;
 	padding: 3px !important;
