--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1206,8 +1206,12 @@ div fieldset img, {
 	margin-bottom: 0px;
 }
 
+#flexicontent div fieldset.panelform .input-append > input,
+#flexicontent div fieldset.panelform .input-prepend > button {
+	margin-left:0px;
+}
 #flexicontent div fieldset.panelform :not(.container_fcfield) fieldset.radio,
-#flexicontent div fieldset.panelform input,
+#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append) > input,
 #flexicontent div fieldset.panelform textarea {
 	min-width: 60%;
 	width: 72%;
@@ -1215,7 +1219,7 @@ div fieldset img, {
 div fieldset td input, div fieldset td textarea {
 	min-width: 80%;
 }
-#flexicontent div fieldset.panelform input,
+#flexicontent div fieldset.panelform :not(.input-prepend):not(.input-append) > input,
 #flexicontent div fieldset.panelform textarea,
 #flexicontent div fieldset.panelform select,
 div fieldset td input, div fieldset td textarea, div fieldset td select {
