--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -600,6 +600,13 @@
 		</fieldset>
 		
 		<fieldset name="cat_item_filtering" addfieldpath="/administrator/components/com_flexicontent/elements">
+		
+		<field name="" type="separator" default="FLEXI_SLIDER_SEARCH_MOD" description="" level="level2" hr="false" />
+			<field name="slider_mod" type="radio" default="0" label="FLEXI_SEARCH_MOD" description="FLEXI_SEARCH_MOD_DESC" class="btn-group btn-group-yesno">
+				<option value="0">FLEXI_NO</option>
+				<option value="1">FLEXI_YES</option>
+			</field>
+			<field name="slider_cat_title" type="text" size="20" default="" label="FLEXI_SLIDER_NAME" description="FLEXI_SLIDER_NAME_DESC" />
 			
 			<field name="" type="separator" default="FLEXI_SEARCH_FILTER_FORM" description="" level="level2" hr="false" />
 			<field name="show_search_go" type="radio" default="" label="FLEXI_SEARCH_GO_BUTTON" description="FLEXI_SEARCH_GO_BUTTON_DESC" class="btn-group btn-group-yesno">
